--- a/el.html
+++ b/el.html
@@ -24,7 +24,7 @@
        </nav>
    </header>
    <main>
-          <form action="https://github.com/mari1112/mari1112.github.io.git" method="POST" target="_blank" class="form">
+          <form action="mail.php" method="POST" target="_blank" class="form">
            <p><input tupe="text" name="name" class="feedback-input" placeholder="Имя" id="name"></p>
            <p><input tupe="email" name="email" class="feedback-input" placeholder="email" id="email"></p>
            <p><textarea name="text" id="comment" placeholder="Отправьте интерисующий Вас вопрос. Вам ответят в течении рабочего дня" class="feedback-input"></textarea></p>
